--- a/.travis.yml
+++ b/.travis.yml
@@ -11,7 +11,7 @@ env:
 install:
     # Install most recent beanstalkd from source
     - wget https://github.com/kr/beanstalkd/archive/v1.9.tar.gz
-    - tar xf beanstalkd-1.9.tar.gz
+    - tar xf v1.9.tar.gz
     - make -C beanstalkd-1.9/
     - mv beanstalkd-1.9/beanstalkd .
     # Install Python dependencies.
